# anime-quote

./: Cargo.toml  LICENSE  Makefile  README.md
src/: db.rs  main.rs
src/models/: mod.rs  quote.rs  user.rs
src/routes/: auth.rs  mod.rs  quote.rs
src/services/: mod.rs
